Queue reader ready for testing on conveyor belt